# haptic-harmony-simulator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MACOS_CODE_SIGNING_SETUP.md  Makefile  README.md  RELEASE_SETUP.md  SOFTWARE_REQUIREMENTS_SPECIFICATION.md  SSL_COM_WINDOWS_SIGNING_GUIDE.md  SYSTEM_REQUIREMENTS.md  WINDOWS_CODE_SIGNING_SETUP.md  WINDOWS_DEPLOYMENT_GUIDE.md  ai.gestura.HapticHarmonySimulator.yml  build.rs  docker-compose.yml  entitlements.plist  justfile  tauri.conf.json
.cargo/: audit.toml
.github/workflows/: ci.yml  package-managers.yml  release.yml
docs/: RELEASE_WORKFLOW.md  VALIDATION_AND_OPERATIONS.md
icons/: icon.icns
packaging/flatpak/: ai.gestura.HapticHarmonySimulator.desktop  ai.gestura.HapticHarmonySimulator.metainfo.xml
packaging/homebrew/: haptic-harmony-simulator.rb
scripts/: build-release.sh  build.sh  collect_release_assets.py  generate-icons.sh  validate-production.sh  verify-apple-signing.sh  verify-github-actions.sh  verify-icons.sh  verify-windows-build.ps1
snap/: snapcraft.yaml
src/: device_core.rs  emulator.rs  feedback.rs  lib.rs  main.rs  mcp_mock.rs  protocol.rs  ring_specs.rs  tauri_app.rs  transport_adapters.rs  trust.rs
src/connectivity/: ble_mock.rs  ble_peripheral.rs  mod.rs  native_ble_backend.rs  socket_client.rs
src/ui/: cli.rs  mod.rs  pad.rs  tilt.rs
tests/: device_core_conformance.rs  integration_tests.rs
ui/: build.js  debug-report.json  package.json
